--- a/app/src/main/res/layout/view_all_item.xml
+++ b/app/src/main/res/layout/view_all_item.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/view_img"
             android:scaleType="centerCrop"
-            android:src="@drawable/fruits"
+            android:src="@drawable/profile"
             android:layout_width="150dp"
             android:layout_height="150dp"/>
         <LinearLayout
