Optimizing desing and adding some feature

--- a/app/src/main/res/layout/activity_placed_order.xml
+++ b/app/src/main/res/layout/activity_placed_order.xml
@@ -14,7 +14,7 @@
         android:fontFamily="@font/aclonica"
         android:text="Your order has been placed"
         android:textAlignment="center"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
