--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DetailedActivity">
+    tools:context=".activities.DetailedActivity"
+    android:background="#F0F0F0">
 
     <ImageView
         android:id="@+id/detailed_img"
@@ -19,7 +20,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
+        android:background="@color/colorGrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,8 +31,8 @@
         android:id="@+id/detailed_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Price: $30/kg"
-        android:textColor="@color/purple_700"
+        android:text="Price:"
+        android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
         android:fontFamily="@font/alice"
@@ -69,7 +70,7 @@
         android:fontFamily="@font/alice"
         android:text="Description"
         android:textStyle="bold"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +91,7 @@
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="#C5FDAD"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -109,14 +110,15 @@
         android:id="@+id/quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginEnd="1dp"
         android:text="1"
-        android:textStyle="bold"
         android:textSize="30sp"
-        android:layout_marginRight="7dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/remove_item"
         app:layout_constraintStart_toEndOf="@id/add_item"
-        app:layout_constraintTop_toTopOf="@id/relativeLayout"
-        android:layout_marginLeft="4dp"/>
+        app:layout_constraintTop_toTopOf="@id/relativeLayout" />
 
     <ImageView
         android:id="@+id/remove_item"
