--- a/app/src/main/res/layout/activity_nav_category.xml
+++ b/app/src/main/res/layout/activity_nav_category.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.NavCategoryActivity">
+    tools:context=".activities.NavCategoryActivity"
+    android:background="#F0F0F0">
 
     <ProgressBar
         android:id="@+id/progressbar"
@@ -20,7 +21,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
+        android:background="@color/colorGrey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
