--- a/app/src/main/res/layout/fragment_my_carts.xml
+++ b/app/src/main/res/layout/fragment_my_carts.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:textColor="@color/purple_700"
+            android:textColor="@color/black"
             app:layout_constraintVertical_bias="0"
             android:textAlignment="center"
             android:layout_width="match_parent"
