--- a/app/src/main/res/layout/home_cat_items.xml
+++ b/app/src/main/res/layout/home_cat_items.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/purple_700"
+        android:background="#757575"
         android:gravity="center_horizontal"
         android:orientation="vertical">
         <ImageView
@@ -17,7 +17,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/milk2"
+            android:src="@drawable/profile"
             app:tint="@color/white" />
         <TextView
             android:id="@+id/cat_home_name"
@@ -27,7 +27,7 @@
             android:textStyle="bold"
             android:textColor="@color/white"
             android:textAlignment="center"
-            android:fontFamily="@font/alice"/>
+            android:fontFamily="@font/lato_bold"/>
 
     </LinearLayout>
 
