--- a/app/src/main/res/layout/nav_category_detailed_item.xml
+++ b/app/src/main/res/layout/nav_category_detailed_item.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:id="@+id/cat_nav_img"
             android:scaleType="centerInside"
-            android:src="@drawable/fruits"
+            android:src="@drawable/profile"
             android:layout_width="120dp"
             android:layout_height="125dp"/>
         <LinearLayout
@@ -39,14 +39,14 @@
 
 
             <TextView
-                android:fontFamily="@font/alice"
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/alice"
                 android:text="Product price"
+                android:textColor="@color/black"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/purple_700"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -76,18 +76,19 @@
                     android:src="@drawable/remove_circle" />
 
             </LinearLayout>
+
             <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buynow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+                android:id="@+id/buynow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
                 android:layout_margin="5dp"
-            android:background="@drawable/btn_bg_detailed"
+                android:background="@drawable/ic_login_btn"
                 android:text="Buy Now"
-                android:textSize="10sp"
                 android:textAllCaps="false"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_gravity="end"/>
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
