--- a/app/src/main/res/layout/slide_screen.xml
+++ b/app/src/main/res/layout/slide_screen.xml
@@ -60,6 +60,7 @@
         android:text="Welcome!"
         android:textColor="@color/simpleWhite"
         android:fontFamily="@font/lato"
+        android:gravity="center"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +76,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:textSize="22sp"
-        android:gravity="left"
+        android:gravity="center"
         android:text="To the app that helps you sell your art."
         android:textColor="@color/simpleWhite"
         android:fontFamily="@font/lato"
