--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,103 +7,183 @@
     tools:context=".ui.profile.ProfileFragment"
     android:background="#F0F0F0">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_img"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="63dp"
+        android:layout_height="56dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
+
         android:src="@drawable/profile"
-
-        android:layout_marginTop="15dp"
         app:civ_border_color="#FF000000"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/profile_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Your Name"
-        android:padding="13dp"
-        android:background="@drawable/edittext_bg"
+        android:layout_width="167dp"
+        android:layout_height="55dp"
+        android:fontFamily="@font/lato_bold"
+        android:gravity="center"
         android:layout_marginTop="20dp"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:drawablePadding="10dp"
-        android:elevation="3dp"
+        android:text="Your Name"
+        android:background="@null"
+        android:textColor="#242222"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/settings_img"
+        app:layout_constraintStart_toEndOf="@+id/profile_img"
+
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/settings_img"
+        android:layout_width="63dp"
+        android:layout_height="56dp"
+        android:scaleX="0.7"
+        android:scaleY="0.7"
+
+        android:src="@drawable/ic_setting"
+        app:civ_border_color="#FF000000"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_img"
-        app:layout_constraintWidth_percent=".8"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:inputType="textEmailAddress"
-        android:id="@+id/profile_email"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edittext_bg"
-        android:drawableLeft="@drawable/account"
-        android:drawablePadding="10dp"
-        android:elevation="3dp"
-        android:hint="Your Email"
-        android:padding="13dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_name"
-        app:layout_constraintWidth_percent=".8" />
-
-    <EditText
-        android:inputType="textPassword"
-        android:id="@+id/profile_number"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edittext_bg"
-        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
-        android:drawablePadding="10dp"
-        android:elevation="3dp"
-        android:hint="Phone Number"
-        android:padding="13dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_email"
-        app:layout_constraintWidth_percent=".8" />
-
-    <EditText
-        android:id="@+id/profile_address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edittext_bg"
-        android:drawableLeft="@drawable/ic_baseline_location_on_24"
-        android:drawablePadding="10dp"
-        android:elevation="3dp"
-        android:hint="Your Address"
-        android:padding="13dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_number"
-        app:layout_constraintWidth_percent=".8" />
-
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/update"
+    <LinearLayout
+        android:id="@+id/frame"
+        android:background="@drawable/frame_56"
+        android:elevation="50dp"
         android:layout_width="match_parent"
-        android:layout_marginLeft="120dp"
-        android:layout_marginRight="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:padding="14dp"
-        android:text="Update"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:background="@drawable/ic_login_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_address">
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="70dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/profile_name">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="34dp"
+            android:gravity="center"
+            android:text="Personal Information"
+            android:textColor="#56567E"
+            android:fontFamily="@font/lato_bold"
+            android:textSize="22sp" />
+        <LinearLayout
+            android:id="@+id/frame_profile_email"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/frame">
+            <TextView
+                android:id="@+id/text_profile_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Your Email:"
+                android:gravity="left"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="18sp"
+                />
+            <EditText
+                android:id="@+id/profile_email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Your Email"
+                android:inputType="textEmailAddress"
+                android:background="@null"
+                app:layout_constraintTop_toBottomOf="@+id/text_profile_email"
+                />
+        </LinearLayout>
 
-    </androidx.appcompat.widget.AppCompatButton>
+        <LinearLayout
+            android:id="@+id/frame_profile_number"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/frame_profile_email">
+            <TextView
+                android:id="@+id/text_profile_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Your phone:"
+                android:gravity="left"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="18sp"
+                />
+            <EditText
+                android:id="@+id/profile_number"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Phone Number"
+                android:inputType="textPassword"
+                android:background="@null"
+                app:layout_constraintTop_toBottomOf="@+id/text_profile_number"/>
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/frame_profile_address"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/frame_profile_number" >
+            <TextView
+                android:id="@+id/text_profile_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Your address:"
+                android:gravity="left"
+                android:fontFamily="@font/lato_bold"
+                android:textSize="18sp"
+                />
+            <EditText
+                android:id="@+id/profile_address"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Your Address"
+                android:background="@null"
+                app:layout_constraintTop_toBottomOf="@+id/text_profile_address"
+
+           />
+        </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/update"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="90dp"
+            android:layout_marginRight="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="30dp"
+            android:text="Change"
+            android:fontFamily="@font/lato_bold"
+            android:textSize="17sp"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@drawable/ic_btn_gradient_profile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frame">
+
+        </androidx.appcompat.widget.AppCompatButton>
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
