--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -7,5 +7,6 @@
         <item>@font/lato_bold</item>
         <item>@font/lato_thin</item>
         <item>@font/philosopher</item>
+        <item>@font/poppins_medium</item>
     </array>
 </resources>
