--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,6 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-
                 android:background="@drawable/search_gb"
                 android:drawableLeft="@drawable/ic_baseline_search_24"
                 android:drawablePadding="5dp"
@@ -38,6 +37,13 @@
                 android:hint="Search..."
                 android:padding="13dp"
                 android:textColorHint="#14181F" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/search_rec"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
