Chat + Animated Floating Action Button + New BackEnd + GoogleSignIn + more things

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ForgotPasswordActivity"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/reg_img"
@@ -26,7 +26,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/alice"
+        android:fontFamily="@font/philosopher"
         android:gravity="center_horizontal|center_vertical"
         android:text="Share an inner beauty"
         android:textColor="@color/black"
@@ -58,7 +58,7 @@
         android:layout_marginTop="24dp"
         android:backgroundTint="#222222"
         android:text="Reset Password"
-        android:fontFamily="@font/alice"
+        android:fontFamily="@font/lato_bold"
         android:textColor="#ffffff"
         android:textSize="21sp"
         android:textStyle="bold"
