--- a/app/src/main/res/drawable/fab_add_custom.xml
+++ b/app/src/main/res/drawable/fab_add_custom.xml
@@ -1,27 +1,29 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="30dp"
-    android:height="30dp"
+    android:height="31dp"
     android:viewportWidth="30"
-    android:viewportHeight="30"
-    android:tint="?attr/colorControlNormal">
-    <path android:pathData="M3.75 9.25H26.25"
-        android:strokeColor="#14181F"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeLineCap="round" />
-    <path android:pathData="M3.75 15.5H26.25"
+    android:viewportHeight="31">
+
+    <path
+        android:fillColor="#000000"
         android:strokeColor="#14181F"
         android:strokeWidth="2"
         android:strokeLineJoin="round"
         android:strokeLineCap="round"
-      />
-    <path android:pathData="M3.75 21.75H26.25"
+        android:pathData="M3.75 21.75H26.25" />
+    <path
+        android:fillColor="#000000"
         android:strokeColor="#14181F"
         android:strokeWidth="2"
         android:strokeLineJoin="round"
         android:strokeLineCap="round"
-       />
-
-
+        android:pathData="M3.75 15.5H26.25" />
+    <path
+        android:fillColor="#000000"
+        android:strokeColor="#14181F"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"
+        android:strokeLineCap="round"
+        android:pathData="M3.75 9.25H26.25" />
 </vector>
-
