--- a/app/src/main/res/drawable/unselected.xml
+++ b/app/src/main/res/drawable/unselected.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="oval">
-          <solid android:color="@color/colorGrey"/>
+          <solid android:color="@color/grey"/>
             <size android:width="24dp" android:height="24dp"/>
         </shape>
     </item>
