--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.DetailedActivity"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/detailed_img"
@@ -20,7 +20,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGrey"
+        android:background="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,7 +35,7 @@
         android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:fontFamily="@font/alice"
+        android:fontFamily="@font/lato"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/detailed_img"
         android:layout_marginTop="10dp"
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5.0"
-        android:fontFamily="@font/alice"
+        android:fontFamily="@font/lato"
         android:textSize="20sp"
         android:layout_marginTop="14dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/alice"
+        android:fontFamily="@font/lato"
         android:text="Description"
         android:textStyle="bold"
         android:textColor="@color/black"
