--- a/app/src/main/res/layout/activity_nav_category.xml
+++ b/app/src/main/res/layout/activity_nav_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.NavCategoryActivity"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
     <ProgressBar
         android:id="@+id/progressbar"
@@ -21,7 +21,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGrey"
+        android:background="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
