--- a/app/src/main/res/layout/activity_placed_order.xml
+++ b/app/src/main/res/layout/activity_placed_order.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/lato_bold"
         android:text="Your order has been placed"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -35,7 +35,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alice"
+        android:fontFamily="@font/lato_bold"
         android:text="Thank you for purchasing our product \n Please, come again."
         android:textColor="#DD4545"
         android:textSize="20sp"
