--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.RegistrationActivity"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
 
     <ImageView
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/name"
+        android:id="@+id/regName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -41,7 +41,7 @@
 
 
     <EditText
-        android:id="@+id/email_reg"
+        android:id="@+id/regEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -55,12 +55,12 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintTop_toBottomOf="@+id/regName"
         app:layout_constraintWidth_percent=".85" />
 
 
     <EditText
-        android:id="@+id/password_reg"
+        android:id="@+id/regPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -75,7 +75,7 @@
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_reg"
+        app:layout_constraintTop_toBottomOf="@+id/regEmail"
         app:layout_constraintWidth_percent=".85" />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/reg_btn"
@@ -92,7 +92,7 @@
         android:background="@drawable/ic_login_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_reg" />
+        app:layout_constraintTop_toBottomOf="@+id/regPassword" />
 
     <TextView
         android:id="@+id/textView"
