--- a/app/src/main/res/layout/activity_wpage1.xml
+++ b/app/src/main/res/layout/activity_wpage1.xml
@@ -82,7 +82,7 @@
         android:text="Next"
         android:textAllCaps="false"
         android:textStyle="bold"
-        android:textColor="#F0F0F0"
+        android:textColor="@color/colorPrimary"
         android:background="@drawable/ic_login_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
