--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.category.CategoryFragment"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
     <ProgressBar
         android:id="@+id/progressbar"
