--- a/app/src/main/res/layout/fragment_my_orders.xml
+++ b/app/src/main/res/layout/fragment_my_orders.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".myOrdersFragment"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,7 +29,7 @@
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/alice"
+            android:fontFamily="@font/lato_bold"
             android:text="You have not purchased anything yet"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
