--- a/app/src/main/res/layout/fragment_new_products.xml
+++ b/app/src/main/res/layout/fragment_new_products.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".newProductsFragment"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
