--- a/app/src/main/res/layout/fragment_offers.xml
+++ b/app/src/main/res/layout/fragment_offers.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".OffersFragment"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
