--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,11 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment"
-    android:background="#F0F0F0">
+    android:background="@color/colorPrimary">
 
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/backArrow"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/ic_left_arrow"
+        tools:ignore="MissingConstraints" />
+
+
+    <ImageView
+        android:id="@+id/plus"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@drawable/plus1"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="71dp"
+        tools:layout_editor_absoluteY="101dp" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_img"
+        android:id="@+id/profileImg"
         android:layout_width="63dp"
         android:layout_height="56dp"
         android:layout_marginLeft="30dp"
@@ -21,18 +40,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/profile_name"
+        android:id="@+id/txtUsername"
         android:layout_width="167dp"
         android:layout_height="55dp"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Your Name"
+        android:hint="Enter Your name"
+        android:textColorHint="@color/grey"
+        android:inputType="textPersonName"
         android:background="@null"
-        android:textColor="#242222"
+        android:textColor="@color/our_black"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/settings_img"
-        app:layout_constraintStart_toEndOf="@+id/profile_img"
+        app:layout_constraintStart_toEndOf="@+id/profileImg"
 
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -61,7 +82,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="70dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/profile_name">
+        app:layout_constraintTop_toBottomOf="@+id/txtUsername">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,17 +108,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="Your Email:"
+                android:text="Email:"
                 android:gravity="left"
                 android:fontFamily="@font/lato_bold"
                 android:textSize="18sp"
                 />
-            <EditText
+            <TextView
                 android:id="@+id/profile_email"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="Your Email"
-                android:inputType="textEmailAddress"
+                android:textColor="@color/grey"
+                android:textSize="18sp"
                 android:background="@null"
                 app:layout_constraintTop_toBottomOf="@+id/text_profile_email"
                 />
@@ -117,54 +139,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="Your phone:"
+                android:text="About:"
                 android:gravity="left"
                 android:fontFamily="@font/lato_bold"
                 android:textSize="18sp"
                 />
             <EditText
-                android:id="@+id/profile_number"
+                android:id="@+id/etStatus"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:hint="Phone Number"
-                android:inputType="textPassword"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                android:maxHeight="300dp"
+                android:hint="Describe your self"
+                android:inputType="textLongMessage|textMultiLine"
                 android:background="@null"
                 app:layout_constraintTop_toBottomOf="@+id/text_profile_number"/>
 
 
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/frame_profile_address"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            app:layout_constraintTop_toBottomOf="@+id/frame_profile_number" >
-            <TextView
-                android:id="@+id/text_profile_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Your address:"
-                android:gravity="left"
-                android:fontFamily="@font/lato_bold"
-                android:textSize="18sp"
-                />
-            <EditText
-                android:id="@+id/profile_address"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:hint="Your Address"
-                android:background="@null"
-                app:layout_constraintTop_toBottomOf="@+id/text_profile_address"
 
-           />
-        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/update"
+            android:id="@+id/saveButton"
             android:layout_width="match_parent"
             android:layout_marginLeft="90dp"
             android:layout_marginRight="90dp"
@@ -184,6 +180,24 @@
         </androidx.appcompat.widget.AppCompatButton>
     </LinearLayout>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/logoutBtn"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="90dp"
+        android:layout_marginRight="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="30dp"
+        android:text="Log out"
+        android:fontFamily="@font/lato_bold"
+        android:textSize="17sp"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:background="@drawable/ic_btn_gradient_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frame">
 
+    </androidx.appcompat.widget.AppCompatButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
