--- a/app/src/main/res/layout/home_cat_items.xml
+++ b/app/src/main/res/layout/home_cat_items.xml
@@ -4,7 +4,8 @@
     android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    app:cardCornerRadius="8dp">
+    app:cardCornerRadius="8dp"
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:layout_width="match_parent"
