--- a/app/src/main/res/layout/recommended_item.xml
+++ b/app/src/main/res/layout/recommended_item.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="Product Name"
             android:textSize="19sp"
-            android:fontFamily="@font/alice"
+            android:fontFamily="@font/lato"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/rec_dec"
