--- a/app/src/main/res/layout/view_all_item.xml
+++ b/app/src/main/res/layout/view_all_item.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:fontFamily="@font/alice"
+                android:fontFamily="@font/lato"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:text="Name"
@@ -37,7 +37,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:fontFamily="@font/alice"
+                android:fontFamily="@font/lato"
                 android:id="@+id/view_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
                 <TextView
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:fontFamily="@font/alice"
+                    android:fontFamily="@font/lato"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Price $"/>
@@ -64,7 +64,7 @@
                     android:id="@+id/view_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/alice"
+                    android:fontFamily="@font/lato"
                     android:text="30"
                     android:textSize="18sp"
                     android:textStyle="bold" />
